overlays/uksouth-staging/default/api-reflector/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/upstream-vhost: reflector.staging.gb.bink.com
  name: reflector.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: reflector.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-reflector
                port:
                  number: 80
          - path: /changelog.html
            pathType: Exact
            backend:
              service:
                name: api2-redoc
                port:
                  number: 80
          - path: /appendix.html
            pathType: Exact
            backend:
              service:
                name: api2-redoc
                port:
                  number: 80
  tls:
    - hosts:
        - reflector.${cluster_name}.${location}.bink.sh
      secretName: reflector.${cluster_name}.${location}.bink.sh
